# fast_io

./: .gitattributes  .gitignore  CMakeLists.txt  Readme.txt  license.txt  readme.md
examples/: CMakeLists.txt  a+b.cc  binary_serialization.cc  compile.cc  compile_time_open_mode.cc  custom_binary_serialization_type.cc  define_custom_type.cc  file_hello_world  file_hello_world.cc  getline.cc  getwhole.cc  hello_double.cc  hello_world1.cc  hello_world2.cc  hello_world3.cc  hello_world4.cc  hello_world_format.cc  inputstring.cc  read_none_existing_file.cc  setw.cc  string_to_size_t.cc  tie.cc  unicode.cc  unicode_to_utf8.cc  utf8_to_unicode.cc
examples/0000.Hello World/: compile.cc  hello_world.cc  hello_world1.cc  hello_world2.cc  hello_world3.cc  hello_world4.cc  hello_world_format.cc
examples/0001.file io/: file_hello_world.cc  mutex_file_hello_world.cc  open_none_existing_file.cc
examples/0002.input string/: getline.cc  getline.txt  getwhole.cc  inputstring.cc
examples/0003.a+b/: a+b.cc  a+b1.cc
examples/0004.convert/: size_t_to_string.cc  size_t_to_string_ostring_directly.cc  string_to_size_t.cc  string_to_size_t_istring_view_directly.cc
examples/0005.runtime_open_mode/: runtime_c_style_open_mode.cc  runtime_open_mode.cc
examples/0006.compile_time_open_mode/: compile_time_c_style_open_mode.cc  compile_time_open_mode.cc
examples/0007.define_custom_type/: define_custom_type.cc  define_custom_type2.cc
examples/0008.binary_serialization/: binary_serialization.cc  custom_binary_serialization_type.cc
examples/0009.floating point/: d2s.c  double_default.cc  double_fixed.cc  double_fixed_setw.cc  double_scientifc.cc  double_scientific.cc  floating_view.cc  integer_scientific.cc  ryu.h  s2d.cc  standard_body_weight.cc
examples/0009.floating point (Not yet complete for library)/: hello_double.cc
examples/0010.manip/: setw.cc
examples/0011.tie/: tie.cc
examples/0012.ucs/: emoji.cc  hello_ucs_world.cc  test_ucs.cc  ucs.cc  ucs_view.cc
examples/0012.unicode/: emoji.cc  hello_unicode_world.cc  test_unicode.cc  unicode_to_utf8.cc  unicode_view.cc  utf8_to_unicode.cc  utf8_to_unicode_detail.cc
examples/0012.unicode(Not yet complete)/: unicode.cc  unicode_to_utf8.cc  utf8_to_unicode.cc
examples/0013.incorrect examples/: eof.cc  eof_correct.cc  multithread_sync.cc  outputline.cc  speck_cbc_ucs_server.cc  string_view.cc
examples/0014.random_password/: pass.cc  random_password.cc
examples/0015.eat_space_get/: eat_space_get.cc  sample.txt
examples/0016.concat/: concat.cc
examples/0017.unsigned_view/: unsigned_view.cc  uv.cc
examples/0018.base/: base.cc  base25a+b.cc  base36a+b.cc  base3a+b.cc  hexa+b.cc
examples/0019.random_access/: asfaf.txt  ate.cc  random_access.cc
examples/0020.dynamic/: dynamic.cc
examples/0021.benchmark/: charconv.cc  cmath_speed_bench.cc  double_vs_size_t.cc  floor_vs_trunc.cc  input_10M_double.cc  input_10M_size_t.cc  input_10M_size_t_as_string.cc  input_10M_size_t_until_eof.cc  isspace_speed_bench.cc  output_10M_double.cc  output_10M_double_fixed6.cc  output_10M_double_scientific.cc  output_10M_double_with_charconv.cc  output_10M_size_t.cc  ryu.h  vector.cc  write.cc
examples/0022.mutex/: manually_lockguard.cc  multithreads.cc
examples/0023.flush/: any_character_flush.cc  change_flush_state.cc  immediately_flush.cc  line_flush.cc  no_tie_immediately_line_flush.cc
examples/0024.multithreads/: multithreads_log.cc  multithreads_log_line_flush.cc
examples/0025.multiprocesses/: multithread_sync.cc  ofsync.cc  osync.cc  run_mt_sync.cc  sync.cc
examples/0026.helper/: exception_throw_cost.cc  fft.cc  floating - Copy.h  floating.cc  gennum.cc  ipv6_parse.cc  mode.cc  my_addressof.cc  natural.cc  res.cc  test_imutex.cc
examples/0027.pointer/: addressof.cc
examples/0028.pipe/: linux_apis.h  pipe.cc  scan_linux_processes_address_space.cc
examples/0029.win32/: win32.cc
examples/0029.windowsnt/: nt.cc
examples/0030.text_view/: read_text_view.cc  text_view.cc
examples/0031.iostream/: ifstream.cc  ofstream.cc  sstream.cc  stream_view.cc  streambuf_view.cc
examples/0032.eof/: scan_int_until_eof.cc
examples/0033.socket/: client.cc  dns.cc  dns_client.cc  server.cc  socket.cc  speck_cbc_ucs_client.cc  speck_cbc_ucs_server.cc  ucs_client.cc  ucs_server.cc
examples/0034.crypto/: CMakeLists.txt  cbc.cc  client.cc  ctr.cc  ctr_binary_serialization.cc  ecb.cc  one_time_pad.cc  server.cc  speck_copy.cc  test.cc
examples/0035.transmit/: buffered_copy.cc  generate_huge_file.cc  my_copy.cc  scan_linux_processes_address_space.cc  zero_copy.cc
examples/0036.concepts_check/: contiguous_iterator.cc  iostrm.cc  movable  movable.cc  print_scan.cc
examples/0037.rsa/: rsa.cc
examples/0038.ryu/: bit_cast.cc  fixed.h  generate_fixed_table.cc  include_dbl_table.cc  include_fixed_table.cc  longdoublesize.cc  print_table.cc  print_table_dbl.cc  ru.cc  ryu.cc  ryu.h  test.cc  unsigned_extension.cc
examples/0039.fill_nc/: fill_nc.cc  fill_string.cc  mutex.cc  small_amount.cc  timer.h
examples/0040.multiprecision/: mult.cc  pow_mod.cc
examples/0041.ospan/: ospan.cc
examples/0042.experimentals/: fast_io.h  integer.h  istack.h  posix.h
examples/0043.freestanding/: linux_freestanding_compile_test  linux_freestanding_compile_test.cc  linux_freestanding_compile_test.s  linux_freestanding_number_output  linux_freestanding_number_output.cc  linux_freestanding_number_output.s
examples/0044.http/: http.cc  http_request.txt  http_test_zero_copy.cc
examples/0045.blizzard_authenticator/: domain.h  enroll.cc  key_info.h  restore.cc  view.cc
examples/0046.binary_size/: CMakeLists.txt  fast_io_hello_world.cc  iostream_hello_world.cc  stdio_hello_world.c
examples/0047.error_message/: custom_type.cc
examples/0048.hash/: hmac_sha1.cc  sha1.cc  sha1_demo.cc
examples/0049.permission/: owner_read.cc
examples/0050.copy_semantics/: redirect.cc  redirect_recover.cc
examples/0051.async_io/: epoll.cc
examples/0052.timer/: timer.cc
examples/0053.c_interface/: helloworld.c  output_10M_double.cc  output_10M_size_t.cc  timer.h
(+435 files in other folders)
